Project

General

Profile

Actions

Bug #51530

closed

http/notifications: "Content-Type" is missing in POST messages

Added by Yuval Lifshitz almost 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Community (user)
Tags:
notifications
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

problem is observed when trying to integrate bucket notifications with elasticserach.
the notifications are rejected due to missing "Content-Type" in the notification HTTP header.
reproduction details are here: https://gist.github.com/yuvalif/edb49b322f633e4eb19357c42cbecf74


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #51804: pacific: http/notifications: "Content-Type" is missing in POST messagesResolvedCory SnyderActions
Actions #1

Updated by Yuval Lifshitz almost 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 42189
Actions #2

Updated by Casey Bodley almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51804: pacific: http/notifications: "Content-Type" is missing in POST messages added
Actions #4

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF