rgw/http/notifications: support content type in HTTP POST messages

Fixes: https://tracker.ceph.com/issues/51530

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>